--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Stats Preview Card Component</title>
 
   <style>
-    .attribution { font-size: 12px; text-align: center; color: white; margin-bottom: 12%;}
+    .attribution { font-size: 12px; text-align: center; color: white;}
     .attribution a { color: hsl(228, 45%, 44%); }
 
     @media screen and (min-width: 700px) {
