--- a/index.html
+++ b/index.html
@@ -4,178 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Stats Preview Card Component</title>
 
   <style>
     .attribution { font-size: 12px; text-align: center; color: white;}
     .attribution a { color: hsl(228, 45%, 44%); }
-
-    @media screen and (min-width: 700px) {
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: #040210;
-        min-width: min-content;
-      }
-
-      .main {
-        display: flex;
-        flex-wrap: nowrap;
-        background-color: #430065;
-        max-width: max-content;
-        border-radius: 10px;
-        margin: 12% auto 12% auto;
-      }
-
-      .main > div {
-        height: 446px;
-        width: 540px;
-        background-color: #0f002b;
-      }
-
-      .count{
-        display: flex;
-        flex-wrap: nowrap;
-        max-width: max-content;
-        border-radius: 10px;
-        margin: 0 10% 0 10%;
-      }
-
-      .count > div {
-        width: 100px;
-        margin: 0 20% 0 0;
-      }
-      
-      .left {
-        color: rgb(238, 238, 238);
-        border-radius: 10px 0 0 10px;
-      }
-
-      .right { 
-        opacity: .5;
-        border-radius: 0 10px 10px 0;
-        background-image: url("images/image-header-desktop.jpg");
-      }
-
-      .left > h1 {
-        padding: 10% 10% 0 10%;
-        line-height: 1.2;
-        font-size: 35px;
-      }
-
-      .left > p {
-        padding: 0 30% 5% 10%;
-        line-height: 1.5;
-        font-size: 16px;
-        font-weight: 50;
-        color: rgb(207, 207, 207);
-      }
-
-      .count > div > h4 {
-        font-size: 35px;
-        margin: auto;
-        text-transform: uppercase;
-      }
-
-      .count > div > p {
-        font-size: 15px;
-        text-transform: uppercase;
-        color: rgb(207, 207, 207);
-      }
-
-      .left .insights {
-        color: rgb(175, 103, 216);
-      }
-    }
-
-    @media screen and (max-width: 700px) {
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: #040210;
-        min-width: 700px;
-      }
-
-      .main {
-        display: flex;
-        flex-wrap: wrap;
-        background-color: #430065;
-        max-width: max-content;
-        border-radius: 10px;
-        margin: 12% 5% 12% 5%;
-        text-align: center;
-      }
-
-      .main > div {
-        height: max-content;
-        width: 100%;
-        background-color: #0f002b;
-      }
-
-      .main .right { 
-        height: 446px;
-      }
-
-      .count{
-        display: block;
-        max-width: max-content;
-        border-radius: 10px;
-        margin: auto auto 15% auto;
-      }
-
-      .count > div {
-        width: max-content;
-        margin: auto auto 50% auto;
-      }
-      
-      .left {
-        order: 2;
-        color: rgb(238, 238, 238);
-        border-radius: 0 0 10px 10px;
-      }
-
-      .right { 
-        height: 446px;
-        order: 1;
-        opacity: .5;
-        border-radius: 10px 10px 0 0 ;
-        background-image: url("images/image-header-desktop.jpg");
-      }
-
-      .left > h1 {
-        padding: 5% 5% 0 5%;
-        line-height: 1.2;
-        font-size: 59px;
-        font-weight: 600;
-      }
-
-      .left > p {
-        padding: 0 10% 5% 10%;
-        line-height: 1.5;
-        font-size: 33px;
-        font-weight: 50;
-        color: rgb(207, 207, 207);
-      }
-
-      .count > div > h4 {
-        font-size: 59px;
-        font-weight: 600;
-        text-transform: uppercase;
-        margin: 0;
-      }
-
-      .count > div > p {
-        font-size: 33px;
-        font-weight: 50;
-        text-transform: uppercase;
-        color: rgb(207, 207, 207);
-        margin: 0;
-      }
-
-      .left .insights {
-        color: rgb(175, 103, 216);
-      }
-    }
-
   </style>
 </head>
 <body>
